--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,6 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
@@ -19,7 +16,10 @@ main:
   - name: Publications
     url: '#featured'
     weight: 50
-  - name: Contact
+  - name: Teaching
+    url: '#teaching'
+    weight: 20
+- name: Contact
     url: '#contact'
     weight: 60
 
